Fix the sticky layout issue

--- a/ecolex/static/bootstrap/less/layout.less
+++ b/ecolex/static/bootstrap/less/layout.less
@@ -12,6 +12,11 @@ body {
   }
 }
 
+main {
+  padding-top: @grid-gutter-width;
+  padding-bottom: @grid-gutter-width;
+}
+
 .body-colored {
   background-color: @jumbotron-bg;
   .jumbotron-brand {
